Fix alignment of + button

--- a/client/styles/global.scss
+++ b/client/styles/global.scss
@@ -450,7 +450,7 @@ a {
 	border-radius: 2px;
 	cursor: pointer;
 	background-color: #33a136;
-	margin-top: 15px;
+	margin-top: 0.6em;
 	color: white;
 	font-size: 20px;
 	padding-top: 0px;
